[package]
name = "seed-collector"
version = "0.1.0"
authors = ["xvi <jrip03@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = [ "full", "macros" ] }

hyper = "0.13"
hyper-tls = "0.4"

dotenv = "0.15"
config = "0.10.1"

serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] } 
derive_more = "0.99.2"
